# wav2vec2.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/main/: main.cpp
include/: wav2vec2.h
scripts/: batch_convert.py  convert_to_gguf.py  model_card_template.md  parity_test.py
src/: ggml_backend.h  gguf.h  ops.h  wav2vec2.cpp
tests/: CMakeLists.txt  test_gguf.cpp  test_ops.cpp  test_utils.h
